test/1.2/errors/T_EBSBE.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
bitorder be;

data int x;

method m() -> (uint16 x) nothrow { x = 7; }

method init() {
    /// ERROR EBSBE
    15[0:0];

    local uint32 i;
    local uint32 j;
    local uint32 *p;
    local struct { uint32 i; } s;
    /// ERROR EBSBE
    (i+j)[2];
    /// ERROR EBSBE
    (-i)[1];
    /// ERROR EBSBE
    (i+j)[1, be];
    // no error for little-endian bitslice
    (i+j)[1, le];
    // no error for bitslicing explicitly-sized storage
    (*p)[4];
    $x[5:8];
    i[6, be];
    s.i[2];
    (&s)->i[2];
    // no error for bitslicing expressions with explicit type
    cast(i, uint64)[4];
    i[1:5][2];
    $m()[8];
}
